# LeetCodeTestcasesRunner

./: .gitignore  CMakeLists.txt  main.cpp  testcases.txt
utils/: CMakeLists.txt  parser.hpp  universal_to.hpp  unpacker.hpp
